sov-modules/sov-modules-macros/tests/module_info/derive_on_enum_not_supported.stderr
error: The `ModuleInfo` macro supports structs only.
 --> tests/module_info/derive_on_enum_not_supported.rs:6:1
  |
6 | enum TestStruct<C: Context> {
  | ^^^^
